--- a/app/translations/messages.en.xlf
+++ b/app/translations/messages.en.xlf
@@ -2,66 +2,296 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
     <file source-language="en" datatype="plaintext" original="file.ext">
         <body>
-            <trans-unit id="label.actions">
-                <source>label.actions</source>
-                <target>Actions</target>
-            </trans-unit>
-            <trans-unit id="label.id">
-                <source>label.id</source>
-                <target>Id</target>
-            </trans-unit>
-            <trans-unit id="label.title">
-                <source>label.title</source>
-                <target>Title</target>
-            </trans-unit>
-            <trans-unit id="label.content">
-                <source>label.content</source>
-                <target>Content</target>
-            </trans-unit>
-            <trans-unit id="label.tags">
-                <source>label.tags</source>
-                <target>Tags</target>
-            </trans-unit>
-            <trans-unit id="message.empty_list">
-                <source>message.empty_list</source>
-                <target>List is empty.</target>
-            </trans-unit>
-            <trans-unit id="message.record_not_found">
-                <source>message.record_not_found</source>
-                <target>Record not found.</target>
-            </trans-unit>
-            <trans-unit id="title.record_list">
-                <source>title.record_list</source>
-                <target>Records list</target>
-            </trans-unit>
-            <trans-unit id="title.record_view">
-                <source>title.record_view</source>
-                <target>Record view</target>
-            </trans-unit>
-            <trans-unit id="header.record_content">
-                <source>header.record_content</source>
-                <target>Content:</target>
-            </trans-unit>
-            <trans-unit id="header.record_tags">
-                <source>header.record_tags</source>
-                <target>Tags:</target>
-            </trans-unit>
-            <trans-unit id="message.record_not_exist">
-                <source>message.record_not_exist</source>
-                <target>This record does not exist.</target>
-            </trans-unit>
-            <trans-unit id="button.action_show">
-                <source>button.action_show</source>
-                <target>Show</target>
-            </trans-unit>
-            <trans-unit id="label.created_at">
-                <source>label.created_at</source>
-                <target>Data utworzenia</target>
-            </trans-unit>
-            <trans-unit id="label.updated_at">
-                <source>label.updated_at</source>
-                <target>Data aktualizacji</target>
-            </trans-unit>
+      <trans-unit id="label.actions">
+        <source>label.actions</source>
+        <target>Action</target>
+      </trans-unit>
+
+      <trans-unit id="label.id">
+        <source>label.id</source>
+        <target>Id</target>
+      </trans-unit>
+
+      <trans-unit id="label.title">
+        <source>label.title</source>
+        <target>Title</target>
+      </trans-unit>
+
+      <trans-unit id="label.content">
+        <source>label.content</source>
+        <target>Content</target>
+      </trans-unit>
+
+      <trans-unit id="label.tags">
+        <source>label.tags</source>
+        <target>Tags</target>
+      </trans-unit>
+
+      <trans-unit id="message.empty_list">
+        <source>message.empty_list</source>
+        <target>The list is empty.</target>
+      </trans-unit>
+
+      <trans-unit id="message.record_not_found">
+        <source>message.record_not_found</source>
+        <target>Record not found.</target>
+      </trans-unit>
+
+      <trans-unit id="title.record_list">
+        <source>title.record_list</source>
+        <target>Record List:</target>
+      </trans-unit>
+
+      <trans-unit id="title.record_view">
+        <source>title.record_view</source>
+        <target>Record View</target>
+      </trans-unit>
+
+      <trans-unit id="header.record_content">
+        <source>header.record_content</source>
+        <target>Content:</target>
+      </trans-unit>
+
+      <trans-unit id="header.record_tags">
+        <source>header.record_tags</source>
+        <target>Tags:</target>
+      </trans-unit>
+
+      <trans-unit id="message.record_not_exist">
+        <source>message.record_not_exist</source>
+        <target>This record does not exist.</target>
+      </trans-unit>
+
+      <trans-unit id="button.action_show">
+        <source>button.action_show</source>
+        <target>Show</target>
+      </trans-unit>
+
+      <trans-unit id="label.category">
+        <source>label.category</source>
+        <target>Category</target>
+      </trans-unit>
+
+      <trans-unit id="action.back_to_list">
+        <source>action.back_to_list</source>
+        <target>Back to List</target>
+      </trans-unit>
+
+      <trans-unit id="label.created_at">
+        <source>label.created_at</source>
+        <target>Created At</target>
+      </trans-unit>
+
+      <trans-unit id="label.updated_at">
+        <source>label.updated_at</source>
+        <target>Updated At</target>
+      </trans-unit>
+
+      <trans-unit id="message.created_successfully">
+        <source>message.created_successfully</source>
+        <target>Created successfully</target>
+      </trans-unit>
+
+      <trans-unit id="message.edited_successfully">
+        <source>message.edited_successfully</source>
+        <target>Edited successfully</target>
+      </trans-unit>
+
+      <trans-unit id="message.deleted_successfully">
+        <source>message.deleted_successfully</source>
+        <target>Deleted successfully</target>
+      </trans-unit>
+
+      <trans-unit id="message.error">
+        <source>message.error</source>
+        <target>Error</target>
+      </trans-unit>
+
+      <trans-unit id="title.tag_create">
+        <source>title.tag_create</source>
+        <target>Create Tag</target>
+      </trans-unit>
+
+      <trans-unit id="action.save">
+        <source>action.save</source>
+        <target>Save</target>
+      </trans-unit>
+
+      <trans-unit id="label.address_to_tag">
+        <source>label.address_to_tag</source>
+        <target>Addresses assigned to tag</target>
+      </trans-unit>
+
+      <trans-unit id="title.tag_edit">
+        <source>title.tag_edit</source>
+        <target>Edit Tag</target>
+      </trans-unit>
+
+      <trans-unit id="action.edit">
+        <source>action.edit</source>
+        <target>Edit</target>
+      </trans-unit>
+
+      <trans-unit id="title.tag_list">
+        <source>title.tag_list</source>
+        <target>Tag List</target>
+      </trans-unit>
+
+      <trans-unit id="label.addresses">
+        <source>label.addresses</source>
+        <target>Addresses</target>
+      </trans-unit>
+      <trans-unit id="label.enter_email">
+              <source>label.enter_email</source>
+              <target>Your Email</target>
+      </trans-unit>
+
+      <trans-unit id="button.action_create">
+        <source>button.action_create</source>
+        <target>Create</target>
+      </trans-unit>
+
+      <trans-unit id="button.action_edit">
+        <source>button.action_edit</source>
+        <target>Edit</target>
+      </trans-unit>
+
+      <trans-unit id="button.action_delete">
+        <source>button.action_delete</source>
+        <target>Delete</target>
+      </trans-unit>
+
+      <trans-unit id="title.tag_delete">
+        <source>title.tag_delete</source>
+        <target>Delete Tag</target>
+      </trans-unit>
+
+      <trans-unit id="action.delete">
+        <source>action.delete</source>
+        <target>Delete</target>
+      </trans-unit>
+
+      <trans-unit id="title.user_create">
+        <source>title.user_create</source>
+        <target>Create User</target>
+      </trans-unit>
+
+      <trans-unit id="label.user_in">
+        <source>label.user_in</source>
+        <target>Input User</target>
+      </trans-unit>
+
+      <trans-unit id="label.user_out">
+        <source>label.user_out</source>
+        <target>Output User</target>
+      </trans-unit>
+
+      <trans-unit id="label.add_date">
+        <source>label.add_date</source>
+        <target>Add Date</target>
+      </trans-unit>
+
+      <trans-unit id="label.click_counter">
+        <source>label.click_counter</source>
+        <target>Click Counter</target>
+      </trans-unit>
+
+      <trans-unit id="title.user_edit">
+        <source>title.user_edit</source>
+        <target>Edit User</target>
+      </trans-unit>
+
+      <trans-unit id="label.useres">
+        <source>label.useres</source>
+        <target>Users</target>
+      </trans-unit>
+
+      <trans-unit id="label.email">
+        <source>label.email</source>
+        <target>Email Address</target>
+      </trans-unit>
+
+      <trans-unit id="label.password">
+        <source>label.password</source>
+        <target>Password</target>
+      </trans-unit>
+
+      <trans-unit id="title.user_delete">
+        <source>title.user_delete</source>
+        <target>Delete User</target>
+      </trans-unit>
+
+      <trans-unit id="title.change_password">
+        <source>title.change_password</source>
+        <target>Change Password</target>
+      </trans-unit>
+
+      <trans-unit id="action_logout">
+        <source>action_logout</source>
+        <target>Logout</target>
+      </trans-unit>
+
+      <trans-unit id="button.change_password">
+        <source>button.change_password</source>
+        <target>Change Password</target>
+      </trans-unit>
+
+      <trans-unit id="action_login">
+        <source>action_login</source>
+        <target>Login</target>
+      </trans-unit>
+
+      <trans-unit id="message.form_error">
+        <source>message.form_error</source>
+        <target>Form error occurred</target>
+      </trans-unit>
+
+      <trans-unit id="title.address_create">
+        <source>title.address_create</source>
+        <target>Create Address</target>
+      </trans-unit>
+
+      <trans-unit id="label.address_in">
+        <source>label.address_in</source>
+        <target>Input Address</target>
+      </trans-unit>
+
+      <trans-unit id="label.address_out">
+        <source>label.address_out</source>
+        <target>Output Address</target>
+      </trans-unit>
+
+      <trans-unit id="label.author">
+        <source>label.author</source>
+        <target>Author</target>
+      </trans-unit>
+
+      <trans-unit id="title.address_edit">
+        <source>title.address_edit</source>
+        <target>Edit Address</target>
+      </trans-unit>
+
+      <trans-unit id="title.address_list">
+        <source>title.address_list</source>
+        <target>Address List</target>
+      </trans-unit>
+
+      <trans-unit id="title.address_delete">
+        <source>title.address_delete</source>
+        <target>Delete Address</target>
+      </trans-unit>
+                  <trans-unit id="label.old_password">
+                    <source>label.old_password</source>
+                    <target>Old Password</target>
+                  </trans-unit>
+                  <trans-unit id="label.new_password">
+                    <source>label.new_password</source>
+                    <target>New Password</target>
+                  </trans-unit>
+                  <trans-unit id="label.repeat_new_password">
+                    <source>label.repeat_new_password</source>
+                    <target>Repeat New Password</target>
+                  </trans-unit>
         </body>
     </file>
 </xliff>
